# sdkwork-gameengine

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.app.config.json  sdkwork.workflow.json  tsconfig.json
.sdkwork/: README.md
crates/sdkwork-api-gameengine-assembly/: Cargo.toml  assembly-manifest.json  build.rs
crates/sdkwork-api-gameengine-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-gameengine-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-api-gameengine-standalone-gateway/: Cargo.toml  build.rs
crates/sdkwork-api-gameengine-standalone-gateway/src/: lib.rs  main.rs
crates/sdkwork-api-gameengine-standalone-gateway/src/bootstrap/: catalog.rs  leaderboard.rs  mod.rs  room.rs  routers.rs
crates/sdkwork-api-gameengine-standalone-gateway/tests/: catalog_web_framework.rs
crates/sdkwork-game-catalog-repository-sqlx/: Cargo.toml
crates/sdkwork-game-catalog-repository-sqlx/src/: catalog_list_query.rs  error.rs  kind.rs  lib.rs  memory.rs  sqlx.rs
crates/sdkwork-game-events-repository-sqlx/: Cargo.toml
crates/sdkwork-game-events-repository-sqlx/specs/: component.spec.json
crates/sdkwork-game-events-repository-sqlx/src/: kind.rs  lib.rs  memory.rs  sqlx.rs
crates/sdkwork-game-events-service/: Cargo.toml
crates/sdkwork-game-events-service/specs/: component.spec.json
crates/sdkwork-game-events-service/src/: lib.rs
crates/sdkwork-game-events-service/src/domain/: models.rs
crates/sdkwork-game-events-service/src/ports/: repository.rs
crates/sdkwork-game-events-service/src/service/: mod.rs
crates/sdkwork-game-leaderboard-repository-sqlx/: Cargo.toml
crates/sdkwork-game-leaderboard-repository-sqlx/src/: kind.rs  lib.rs  memory.rs  sqlx.rs
crates/sdkwork-game-leaderboard-service/: Cargo.toml
crates/sdkwork-game-leaderboard-service/src/: lib.rs
crates/sdkwork-game-leaderboard-service/src/domain/: models.rs
crates/sdkwork-game-leaderboard-service/src/ports/: repository.rs
crates/sdkwork-game-leaderboard-service/src/service/: mod.rs
crates/sdkwork-game-matchmaking-repository-sqlx/: Cargo.toml
crates/sdkwork-game-matchmaking-repository-sqlx/specs/: component.spec.json
crates/sdkwork-game-matchmaking-repository-sqlx/src/: kind.rs  lib.rs  memory.rs  sqlx.rs
crates/sdkwork-game-matchmaking-service/: Cargo.toml
crates/sdkwork-game-matchmaking-service/specs/: component.spec.json
crates/sdkwork-game-matchmaking-service/src/: lib.rs
crates/sdkwork-game-mode-repository-sqlx/: Cargo.toml
crates/sdkwork-game-mode-repository-sqlx/src/: kind.rs  lib.rs  memory.rs  sqlx.rs
crates/sdkwork-game-points-repository-sqlx/: Cargo.toml
crates/sdkwork-game-points-repository-sqlx/specs/: component.spec.json
crates/sdkwork-game-points-repository-sqlx/src/: lib.rs  memory.rs  sqlx.rs
crates/sdkwork-game-points-service/: Cargo.toml
crates/sdkwork-game-points-service/specs/: component.spec.json
crates/sdkwork-game-points-service/src/: lib.rs
crates/sdkwork-game-room-repository-sqlx/: Cargo.toml
crates/sdkwork-game-room-repository-sqlx/src/: kind.rs  lib.rs  memory.rs  sqlx.rs
crates/sdkwork-game-room-service/: Cargo.toml
crates/sdkwork-game-room-service/src/: lib.rs
crates/sdkwork-game-rules-repository-sqlx/: Cargo.toml
crates/sdkwork-game-rules-repository-sqlx/src/: kind.rs  lib.rs  memory.rs  sqlx.rs
crates/sdkwork-game-session-repository-sqlx/: Cargo.toml
crates/sdkwork-game-session-repository-sqlx/specs/: component.spec.json
crates/sdkwork-game-session-repository-sqlx/src/: kind.rs  lib.rs  memory.rs  sqlx.rs
crates/sdkwork-game-session-service/: Cargo.toml
crates/sdkwork-game-session-service/specs/: component.spec.json
crates/sdkwork-game-session-service/src/: lib.rs
crates/sdkwork-game-settlement-service/: Cargo.toml
crates/sdkwork-game-settlement-service/specs/: component.spec.json
crates/sdkwork-game-settlement-service/src/: lib.rs
crates/sdkwork-gameengine-database-host/: Cargo.toml
crates/sdkwork-gameengine-gateway-assembly/: Cargo.toml  assembly-manifest.json  build.rs
crates/sdkwork-gameengine-gateway-assembly/specs/: README.md  component.spec.json
crates/sdkwork-gameengine-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs  web_bootstrap.rs
crates/sdkwork-gameengine-service-host/: Cargo.toml
crates/sdkwork-gameengine-service-host/specs/: README.md  component.spec.json
crates/sdkwork-gameengine-service-host/src/: lib.rs
crates/sdkwork-gameengine-standalone-gateway/: Cargo.toml
crates/sdkwork-gameengine-standalone-gateway/src/: lib.rs  main.rs  web_bootstrap.rs
crates/sdkwork-gameengine-standalone-gateway/tests/: catalog_web_framework.rs
crates/sdkwork-games-api-server/: Cargo.toml  build.rs
crates/sdkwork-games-api-server/src/: catalog_bootstrap.rs  lib.rs  main.rs  web_bootstrap.rs
crates/sdkwork-games-api-server/tests/: catalog_web_framework.rs
crates/sdkwork-games-database-host/: Cargo.toml
crates/sdkwork-games-database-host/src/: lib.rs
crates/sdkwork-routes-catalog-app-api/: Cargo.toml
crates/sdkwork-routes-catalog-app-api/specs/: component.spec.json
crates/sdkwork-routes-catalog-app-api/src/: handlers.rs  lib.rs  manifest.rs  routes.rs
crates/sdkwork-routes-catalog-backend-api/: Cargo.toml
crates/sdkwork-routes-catalog-backend-api/specs/: component.spec.json
crates/sdkwork-routes-catalog-backend-api/src/: error.rs  manifest.rs  paths.rs  routes.rs
crates/sdkwork-routes-games-support/: Cargo.toml
crates/sdkwork-routes-games-support/src/: catalog.rs  correlation.rs  leaderboard.rs  lib.rs  problem.rs  query.rs  response.rs  room.rs
crates/sdkwork-routes-leaderboard-app-api/: Cargo.toml
crates/sdkwork-routes-leaderboard-app-api/specs/: component.spec.json
crates/sdkwork-routes-leaderboard-app-api/src/: lib.rs  manifest.rs  paths.rs  routes.rs
crates/sdkwork-routes-room-app-api/: Cargo.toml
crates/sdkwork-routes-room-app-api/specs/: component.spec.json
crates/sdkwork-routes-room-app-api/src/: lib.rs  manifest.rs  paths.rs  routes.rs
(+212 files in other folders)
