[package]
name = "sdkwork-game-catalog-repository-sqlx"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "SQLx repository for SDKWork game catalog."

[lib]
path = "src/lib.rs"

[features]
test-support = []

[dependencies]
async-trait.workspace = true
sdkwork_game_catalog_service.workspace = true
sdkwork-utils-rust.workspace = true
sdkwork-database-sqlx.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror = "2"

[dev-dependencies]
tokio.workspace = true
