[package]
name = "sdkwork-game-events-service"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "SDKWork games engine events and audit domain service."

[lib]
name = "sdkwork_game_events_service"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sdkwork-utils-rust.workspace = true

[dev-dependencies]
tokio.workspace = true
