[package]
name = "sdkwork-game-matchmaking-repository-sqlx"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "SQLx-backed games matchmaking repository."

[lib]
name = "sdkwork_game_matchmaking_repository_sqlx"
path = "src/lib.rs"

[features]
test-support = []

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
sdkwork-database-sqlx.workspace = true
sdkwork_game_matchmaking_service.workspace = true
sdkwork-utils-rust.workspace = true

[dev-dependencies]
sdkwork-database-config.workspace = true
tokio.workspace = true
