[package]
name = "sdkwork-game-points-service"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "SDKWork games point ledger domain service."

[lib]
name = "sdkwork_game_points_service"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
serde.workspace = true
sdkwork-utils-rust.workspace = true

[dev-dependencies]
tokio.workspace = true
