[package]
name = "sdkwork-game-session-service"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "SDKWork games session domain service."

[lib]
name = "sdkwork_game_session_service"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sdkwork-utils-rust.workspace = true

[dev-dependencies]
tokio.workspace = true
