[package]
name = "sdkwork-gameengine-gateway-assembly"
edition.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-gameengine application HTTP plane."

[lib]
name = "sdkwork_gameengine_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork-gameengine-standalone-gateway = { path = "../sdkwork-gameengine-standalone-gateway" }
sdkwork-routes-catalog-app-api = { path = "../sdkwork-routes-catalog-app-api" }
sdkwork-routes-catalog-backend-api = { path = "../sdkwork-routes-catalog-backend-api" }
sdkwork-routes-leaderboard-app-api = { path = "../sdkwork-routes-leaderboard-app-api" }
sdkwork-routes-room-app-api = { path = "../sdkwork-routes-room-app-api" }
sdkwork-routes-room-backend-api = { path = "../sdkwork-routes-room-backend-api" }
