[package]
name = "sdkwork-gameengine-standalone-gateway"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "SDKWork games HTTP API server with sdkwork-web-framework integration."
build = "build.rs"

[lib]
path = "src/lib.rs"


[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[[bin]]
name = "sdkwork-gameengine-standalone-gateway"
path = "src/main.rs"

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sdkwork_game_catalog_repository_sqlx.workspace = true
sdkwork_game_catalog_service.workspace = true
sdkwork_games_database_host.workspace = true
sdkwork_routes_catalog_app_api.workspace = true
sdkwork_routes_catalog_backend_api.workspace = true
sdkwork_routes_health_app_api.workspace = true
sdkwork_game_leaderboard_repository_sqlx.workspace = true
sdkwork_game_leaderboard_service.workspace = true
sdkwork_routes_leaderboard_app_api.workspace = true
sdkwork_routes_games_support.workspace = true
sdkwork_game_room_repository_sqlx.workspace = true
sdkwork_game_room_service.workspace = true
sdkwork_routes_room_app_api.workspace = true
sdkwork_routes_room_backend_api.workspace = true
sdkwork-web-core.workspace = true
sdkwork-web-axum.workspace = true
sdkwork-web-bootstrap.workspace = true
sdkwork-web-contract.workspace = true
sdkwork-iam-web-adapter.workspace = true
sdkwork_iam_context_service.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
http-body-util = "0.1"
sdkwork_game_catalog_repository_sqlx = { workspace = true, features = ["test-support"] }
sdkwork_game_leaderboard_repository_sqlx = { workspace = true, features = ["test-support"] }
sdkwork_game_leaderboard_service.workspace = true
sdkwork_game_room_repository_sqlx = { workspace = true, features = ["test-support"] }
sdkwork_game_room_service.workspace = true
tokio.workspace = true
tower = { version = "0.5", features = ["util"] }

