[package]
name = "sdkwork-routes-catalog-app-api"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "SDKWork games catalog app-api router."

[lib]
name = "sdkwork_routes_catalog_app_api"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sdkwork_game_catalog_service.workspace = true
sdkwork_routes_games_support.workspace = true
sdkwork-web-axum.workspace = true

[dev-dependencies]
