[package]
name = "sdkwork-routes-catalog-backend-api"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "SDKWork games catalog backend-api router."

[lib]
name = "sdkwork_routes_catalog_backend_api"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sdkwork_game_catalog_service.workspace = true
sdkwork-web-axum.workspace = true
sdkwork_routes_catalog_app_api.workspace = true
