[package]
name = "sdkwork-routes-games-support"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "Shared SDKWork games HTTP response, problem, and correlation helpers."

[dependencies]
axum.workspace = true
sdkwork_game_catalog_service.workspace = true
sdkwork_game_leaderboard_service.workspace = true
sdkwork_game_room_service.workspace = true
sdkwork-utils-rust.workspace = true
sdkwork-web-core.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
axum.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower = { version = "0.5", features = ["util"] }
