[package]
name = "sdkwork-routes-leaderboard-app-api"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "SDKWork games leaderboard app-api router."

[lib]
name = "sdkwork_routes_leaderboard_app_api"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
serde.workspace = true
sdkwork_game_leaderboard_service.workspace = true
sdkwork_routes_games_support.workspace = true
sdkwork-web-axum.workspace = true
