[package]
name = "sdkwork-routes-room-app-api"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "SDKWork games room app-api router."

[lib]
name = "sdkwork_routes_room_app_api"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
serde.workspace = true
sdkwork_game_room_service.workspace = true
sdkwork_routes_games_support.workspace = true
sdkwork-utils-rust.workspace = true
sdkwork-web-axum.workspace = true
